# infra-autoheal-orchestrator

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  sonar-project.properties
.codex/skills/audit-log-generator/: SKILL.md
.codex/skills/audit-log-generator/agents/: openai.yaml
.codex/skills/crypto-standards/: SKILL.md
.codex/skills/crypto-standards/agents/: openai.yaml
.codex/skills/db-permission-auditor/: SKILL.md
.codex/skills/infra-autoheal-orchestrator/: SKILL.md
.codex/skills/secret-detection/: SKILL.md
.codex/skills/secure-code-review/: SKILL.md
.codex/skills/secure-sdlc/: SKILL.md
.github/workflows/: release.yml
docs/: CODEX_CONTEXT.md  SECURE_DEVELOPMENT_CONTEXT.md
examples/: alertmanager.yml  prometheus-rules.yml
orchestrator/: Dockerfile  docker-compose.yml  pyproject.toml
orchestrator/app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  models.py  runner.py  security.py
orchestrator/app/actions/: __init__.py  apache.py  evidence.py  mariadb.py  proxmox.py  ssh.py
orchestrator/app/notifications/: webhook.py
orchestrator/app/routes/: alertmanager.py
orchestrator/app/rules/: __init__.py  policies.py  router.py
orchestrator/app/storage/: events.py  opensearch.py  state.py
orchestrator/app/validators/: __init__.py  http_check.py  mysql_check.py
orchestrator/config/: hosts.yaml  policies.yaml
orchestrator/tests/: conftest.py  test_mysql_validator.py  test_opensearch.py  test_orchestrator.py  test_router.py  test_routes.py  test_slack_notifications.py  test_ssh_allowlist.py
(+15 files in other folders)
