[project]
name = "infra-autoheal-orchestrator"
version = "0.1.0"
description = "FastAPI orchestrator for safe infrastructure auto-healing runbooks."
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.14.2",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "opensearch-py>=2.6.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
